# cmake_fun

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  teach.md  teach2.md
src/: CMakeLists.txt  add_test.cpp  main.cpp
src/hello/: CMakeLists.txt  hello.cpp
src/math/: CMakeLists.txt  add.cpp  add.hpp
src/world/: CMakeLists.txt  world.cpp
